@@ -1,12 +1,13 @@
-// Copyright © 2017-2020 UKG Inc. <https://www.ukg.com>
+// Copyright © 2017-2021 UKG Inc. <https://www.ukg.com>
 
+import Dependencies.autoImport.OpenTelemetry.{ HoneycombSample, JaegerSample }
 import sbt.Keys._
 
-scalaVersion in ThisBuild := "2.13.5"
+ThisBuild / scalaVersion := "2.13.5"
 
 ThisBuild / crossScalaVersions := Seq("2.13.5", "2.12.12")
 
-skip in publish := true
+publish / skip := true
 
 lazy val unitTest = taskKey[Unit]("Runs only the unit tests")
 
@@ -14,13 +15,13 @@ val multiJvmTestSettings = Seq(
   unitTest := {
     implicit val display: Show[Def.ScopedKey[_]] = Project.showContextKey(state.value)
     val testResultLogger = TestResultLogger.Default.copy(printNoTests = TestResultLogger.const(_.info("No tests to run for test:unitTest scope")))
-    testResultLogger.run(streams.value.log, executeTests.in(Test).value, "test:unitTest")
+    testResultLogger.run(streams.value.log, (Test / executeTests).value, "test:unitTest")
   },
   // Override default definition of test so that sbt test runs both unit and multi-jvm tests
-  test in Test := {
-    unitTest.in(Test).value
+  Test / test := {
+    (Test / unitTest).value
     // FIXME fix multi-jvm tests running on GH Actions
-    // test.in(MultiJvm).value
+    // (MultiJvm / test).value
   })
 
 lazy val `surge-common` = (project in file("modules/common"))
@@ -37,9 +38,9 @@ lazy val `surge-common` = (project in file("modules/common"))
       Kafka.kafkaStreams,
       Kafka.kafkaStreamsScala,
       Kafka.kafkaStreamsTestUtils,
-      OpenTracing.api,
-      OpenTracing.mock,
-      OpenTracing.noop,
+      OpenTelemetry.api,
+      OpenTelemetry.sdk,
+      OpenTelemetry.sdkTesting,
       PlayFramework.json,
       typesafeConfig,
       Akka.akkaStreamTestKit,
@@ -53,23 +54,20 @@ lazy val `surge-common` = (project in file("modules/common"))
   .configs(MultiJvm)
   .dependsOn(`surge-metrics`)
 
-lazy val `surge-rabbitmq-support` = (project in file("modules/rabbit-support"))
-  .settings(libraryDependencies ++= Seq(Alpakka.amqp, Akka.testKit, mockitoCore, scalatest, RabbitMq.embedded))
-  .dependsOn(`surge-common`)
-
 lazy val `surge-engine-command-core` = (project in file("modules/command-engine/core"))
-  .settings(
-    libraryDependencies ++= Seq(
-      Akka.actor,
-      Akka.remote,
-      Kafka.kafkaClients,
-      Akka.testKit,
-      Akka.akkaStreamTestKit,
-      mockitoCore,
-      scalatest,
-      scalatestPlusMockito,
-      logback,
-      typesafeConfig))
+  .settings(libraryDependencies ++= Seq(
+    Akka.actor,
+    Akka.remote,
+    Kafka.kafkaClients,
+    Akka.testKit,
+    Akka.akkaStreamTestKit,
+    mockitoCore,
+    scalatest,
+    scalatestPlusMockito,
+    embeddedKafka,
+    OpenTelemetry.api,
+    logback,
+    typesafeConfig))
   .dependsOn(`surge-common` % "compile->compile;test->test")
 
 lazy val `surge-engine-command-scaladsl` = (project in file("modules/command-engine/scaladsl")).dependsOn(`surge-engine-command-core`)
@@ -81,6 +79,8 @@ lazy val `surge-engine-command-javadsl` =
 
 lazy val `surge-metrics` = (project in file("modules/metrics")).settings(
   libraryDependencies ++= Seq(
+    Akka.actor,
+    Akka.testKit,
     Kafka.kafkaClients,
     PlayFramework.json,
     scalaCollectionCompat,
@@ -92,23 +92,30 @@ lazy val `surge-metrics` = (project in file("modules/metrics")).settings(
 
 lazy val `surge-docs` = (project in file("modules/surge-docs"))
   .dependsOn(`surge-common`, `surge-engine-command-core`, `surge-engine-command-javadsl`, `surge-engine-command-scaladsl`, `surge-metrics`)
-  .enablePlugins(ParadoxPlugin, ParadoxSitePlugin)
+  .enablePlugins(ParadoxPlugin, ParadoxSitePlugin, GhpagesPlugin)
   .settings(
-    skip in publish := true,
+    javacOptions ++= Seq("-source", "15", "--enable-preview"),
+    compileOrder := CompileOrder.JavaThenScala,
+    publish / skip := true,
     paradoxTheme := Some(builtinParadoxTheme("generic")),
-    libraryDependencies ++= Seq(typesafeConfig, embeddedKafka, logback, scalatest, scalatestPlusMockito, mockitoCore))
+    libraryDependencies ++= Seq(
+      typesafeConfig,
+      embeddedKafka,
+      logback,
+      scalatest,
+      scalatestPlusMockito,
+      mockitoCore,
+      HoneycombSample.sdk,
+      HoneycombSample.exporter,
+      HoneycombSample.grpc,
+      JaegerSample.sdk,
+      JaegerSample.exporter,
+      JaegerSample.grpc))
 
 lazy val `surge` = project
   .in(file("."))
-  .aggregate(
-    `surge-common`,
-    `surge-engine-command-core`,
-    `surge-engine-command-javadsl`,
-    `surge-engine-command-scaladsl`,
-    `surge-metrics`,
-    `surge-rabbitmq-support`,
-    `surge-docs`)
-  .settings(skip in publish := true, ReleaseSettings.settings)
+  .aggregate(`surge-common`, `surge-engine-command-core`, `surge-engine-command-javadsl`, `surge-engine-command-scaladsl`, `surge-metrics`, `surge-docs`)
+  .settings(publish / skip := true, ReleaseSettings.settings)
   .disablePlugins(MimaPlugin)
 
 addCommandAlias("codeFormat", ";headerCreate;test:headerCreate;scalafmtAll;scalafmtSbt")
